# ContentMate

./: .env.example  .gitignore  LICENSE  README.md  railway.json  vercel.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260421_0001_initial_schema.py  20260422_0002_google_auth_user_scoping.py  20260422_0003_usage_events.py  20260424_0004_unlimited_analysis_vouchers.py  20260424_0005_credit_system.py
apps/api/app/: main.py
apps/api/app/api/: dependencies.py
apps/api/app/api/v1/: api.py
apps/api/app/core/: config.py  logging.py  rate_limit.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/models/: base.py  channel.py  credit_ledger_entry.py  (+6 more)
apps/api/app/repositories/: channel_repository.py  generated_content_repository.py  transcript_repository.py  user_repository.py
apps/api/app/schemas/: admin.py  agent_workflow.py  analysis.py  auth.py  channel.py  history.py  ideas.py  job.py  openai_usage.py  pipeline.py  transcript.py  validators.py
apps/api/app/services/: admin_service.py  agent_strategy_service.py  agent_workflow_service.py  analysis_service.py  auth_service.py  credit_service.py  history_service.py  ideas_service.py  pipeline_service.py  transcript_service.py  usage_service.py  voucher_service.py  youtube_service.py
apps/api/app/utils/: text.py
apps/api/app/workers/: queue.py
apps/api/contentmate_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/unit/: test_rate_limit.py  test_request_validation.py  test_text_utils.py  test_youtube_client.py
(+36 files in other folders)
