[project]
name = "contentmate-api"
version = "0.1.0"
description = "FastAPI backend for ContentMate"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "langchain>=1.2.0,<2.0.0",
  "langchain-openai>=1.1.0,<2.0.0",
  "langgraph>=1.1.0,<2.0.0",
  "openai>=1.99.0,<2.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "yt-dlp>=2025.3.31",
  "youtube-transcript-api>=0.6.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
